removed unnecessary cast and DECRYPT

--- a/vip-bench/LDA/Makefile
+++ b/vip-bench/LDA/Makefile
@@ -3,7 +3,7 @@ LOCAL_CFLAGS= -I../common
 LOCAL_LIBS=
 
 
-OBJS=LDA.o ../common/utils.o
+OBJS=LDA.o ../common/utils.o ../common/mathlib.o
 
 PROG=LDA
 
